--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
 
     <meta charset="utf-8" />
@@ -10,6 +10,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
