Primera version - Entrega final

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
 
     <meta charset="utf-8" />
@@ -13,7 +13,7 @@
     
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet">
     <title>Pint.Ar</title>
   </head>
 
@@ -26,6 +26,6 @@
 
   </body>
 
-  <script src="/src/index.js"></script>
+  <script src="/src/index.js" type="text/JSX"></script>
 
 </html>
